--- a/application-set/matrix-generator/matrix-generator.yaml
+++ b/application-set/matrix-generator/matrix-generator.yaml
@@ -14,9 +14,9 @@ spec:
               - path: "application-set/git-data/*"
           - list:
               elements:
-                - cluster: https://cluster-1.example.com
+                - cluster: https://kubernetes.default.svc
                   namespace: app-one-namespace
-                - cluster: https://cluster-2.example.com
+                - cluster: https://kubernetes.default.svc
                   namespace: app-two-namespace
   template:
     metadata:
