--- a/application-set/matrix-generator/matrix-generator.yaml
+++ b/application-set/matrix-generator/matrix-generator.yaml
@@ -20,7 +20,7 @@ spec:
                   namespace: app-two-namespace
   template:
     metadata:
-      name: '{{name}}-{{namespace}}'
+      name: '{{namespace}}'
     spec:
       project: default
       source:
