--- a/application-set/matrix-generator/matrix-generator.yaml
+++ b/application-set/matrix-generator/matrix-generator.yaml
@@ -8,27 +8,26 @@ spec:
         generators:
           - list:
               elements:
-                - cluster: dev
-                  url: https://dev-vcluster.opencd.opsmx.org:443
-                - cluster: staging
-                  url: https://kubernetes.default.svc
+                - app: frontend
+                - app: backend
           - git:
               repoURL: https://github.com/Rajesh-Sangepu/argocd-app-bitthal.git
-              revision: HEAD
+              revision: HEAD  # ✅ Correct field name
               directories:
-                - path: application-set/matrix-data/*
+                - path: application-set/matrix-data/matrix-appset1
+                - path: application-set/matrix-data/matrix-appset2
   template:
     metadata:
-      name: "{{cluster}}-{{path.basename}}"
+      name: "{{app}}-{{path.basename}}"  # Generates names like "frontend-matrix-appset1"
     spec:
       project: default
       source:
         repoURL: https://github.com/Rajesh-Sangepu/argocd-app-bitthal.git
         targetRevision: HEAD
-        path: "{{path}}"
+        path: "{{path}}"  # Uses directory from Git generator
       destination:
-        server: "{{url}}"
-        namespace: my-apps
+        server: https://kubernetes.default.svc
+        namespace: "{{app}}-namespace"
       syncPolicy:
         automated:
           prune: true
