--- a/application-set/matrix-generator/matrix-generator.yaml
+++ b/application-set/matrix-generator/matrix-generator.yaml
@@ -27,7 +27,7 @@ spec:
       project: default
       source:
         repoURL: https://github.com/Rajesh-Sangepu/argocd-app-bitthal.git
-        targetRevision: main
+        targetRevision: HEAD
         path: '{{path}}'
       destination:
         server: "https://kubernetes.default.svc"
