--- a/matrix-generator/matrix-generator.yaml
+++ b/matrix-generator/matrix-generator.yaml
@@ -9,14 +9,15 @@ spec:
         generators:
           - list:
               elements:
-                - appName: app0
-                - appName: app1
+                - appName: two-helm1
+                - appName: two-helm2
           - list:
               elements:
-                - name: app0
-                  path: "matrix-data/appset1"
-                - name: app1
-                  path: "matrix-data/appset2"
+                - name: helm-chart-1
+                  valuesPath: "matrix-data/matrix1/two-helm/helm-chart-1"
+                - name: helm-chart-2
+                  valuesPath: "matrix-data/matrix2/two-helm/helm-chart-2"
+                
   template:
     metadata:
       name: '{{appName}}-{{name}}'
@@ -25,7 +26,7 @@ spec:
       source:
         repoURL: "https://github.com/Rajesh-Sangepu/argocd-app-bitthal.git"
         targetRevision: "HEAD"
-        path: "{{path}}"  
+        path: "{{valuesPath}}"
       destination:
         server: "https://kubernetes.default.svc"
         namespace: '{{appName}}'
