--- a/application-set/matrix-generator/matrix-generator.yaml
+++ b/application-set/matrix-generator/matrix-generator.yaml
@@ -28,4 +28,4 @@ spec:
         path: "{{path}}"  
       destination:
         server: "https://kubernetes.default.svc"
-        namespace: '{{appName}}-{{name}}'
+        namespace: '{{appName}}'
